--- a/life.html
+++ b/life.html
@@ -4,5 +4,6 @@
     <script src="./life.js" type="text/javascript"></script>
   </head>
   <body>
+    <button id="next">Next Generation</button>
   </body>
 </htnl>
